// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logError should log long detox runtime errors 1`] = `
Array [
  Array [
    Object {
      "stack": true,
    },
    "DetoxRuntimeError: DetoxRuntimeError: msg123
  at fake error stack",
  ],
]
`;

exports[`logError should log long detox runtime errors 2`] = `
Array [
  Array [
    Object {
      "hint": true,
    },
    "Hint: hint",
  ],
  Array [
    Object {
      "debugInfo": true,
    },
    "See debug info below:
debugInfo",
  ],
]
`;

exports[`logError should log short detox runtime errors 1`] = `
Array [
  Array [
    Object {
      "stack": true,
    },
    "DetoxRuntimeError: DetoxRuntimeError: short
  at fake error stack",
  ],
]
`;

exports[`logError should not fail on nulls 1`] = `
Array [
  Array [
    "Unknown error (null)",
  ],
]
`;
